--- a/css/style.css
+++ b/css/style.css
@@ -994,6 +994,9 @@ body::after {
 .menu__sub-list li:not(:last-child) {
   padding-bottom: .9375rem
 }
+.menu__sub-list li a {
+  transition: color .3s ease
+}
 .menu__arrow {
   position: absolute;
   top: 50%;
@@ -4527,6 +4530,9 @@ html.touch .menu__sub-list.open {
   .menu__item:hover .menu__arrow::before {
     -webkit-transform: rotate(-180deg);
     transform: rotate(-180deg)
+  }
+  .menu__sub-list li a:hover {
+    color: var(--button)
   }
   .footer__menu ul a:hover {
     color: var(--button)
