--- a/css/style.css
+++ b/css/style.css
@@ -998,8 +998,10 @@ body::after {
   transition: color .3s ease
 }
 .menu__arrow {
+  font-size: 1.5rem;
   position: absolute;
   top: 50%;
+  right: -.3125rem;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
   z-index: 3;
@@ -2298,9 +2300,6 @@ html.touch .menu__sub-list.open {
   .header__body {
     padding-bottom: .9375rem
   }
-  .menu__arrow {
-    font-size: 1.375rem
-  }
   .hero__info {
     padding-left: 3.125rem
   }
@@ -2418,9 +2417,6 @@ html.touch .menu__sub-list.open {
   }
   .menu__link.arrow {
     padding-left: 1.25rem
-  }
-  .menu__arrow {
-    right: 1.25rem
   }
 }
 @media (min-width:389px) and (min-width:83.75em) {
@@ -2914,6 +2910,9 @@ html.touch .menu__sub-list.open {
   }
 }
 @media (min-width:991.98px) and (min-width:83.75em) {
+  .menu__arrow {
+    font-size: 1.375rem
+  }
   .branches .hero__breadcrumbs {
     top: 12.5rem
   }
@@ -2931,6 +2930,11 @@ html.touch .menu__sub-list.open {
   }
   .articles {
     padding-top: 12.5rem
+  }
+}
+@media (min-width:991.98px) and (min-width:87.5em) {
+  .menu__arrow {
+    right: 1.25rem
   }
 }
 @media (min-width:1130px) {
@@ -3073,9 +3077,6 @@ html.touch .menu__sub-list.open {
   }
   .menu__link.arrow {
     padding-left: .625rem
-  }
-  .menu__arrow {
-    right: .625rem
   }
   .our-blog__article {
     padding-right: 1.25rem
@@ -3530,9 +3531,6 @@ html.touch .menu__sub-list.open {
   .menu__link.arrow {
     padding-bottom: .625rem
   }
-  .menu__arrow {
-    font-size: .9375rem
-  }
 }
 @media (max-width:61.99875em) {
   .popup--login .popup__header h2 {
@@ -3553,25 +3551,25 @@ html.touch .menu__sub-list.open {
   .icon-menu {
     display: block;
     position: relative;
-    width: 1.875rem;
-    height: 1.125rem
+    width: 1.5rem;
+    height: 1.5rem
   }
   .icon-menu span,
   .icon-menu::after,
   .icon-menu::before {
     content: "";
     transition: all .3s ease 0s;
-    right: 0;
+    right: calc(0% + .1875rem);
     position: absolute;
-    width: 100%;
+    width: calc(100% - .375rem);
     height: .125rem;
     background-color: var(--secondary)
   }
   .icon-menu::before {
-    top: 0
+    top: calc(0% + .375rem)
   }
   .icon-menu::after {
-    bottom: 0
+    bottom: calc(0% + .375rem)
   }
   .icon-menu span {
     top: calc(50% - .0625rem)
@@ -4185,16 +4183,6 @@ html.touch .menu__sub-list.open {
       padding-left: calc(.625rem + .625 * (100vw - 75rem)/ 12.5)
     }
   }
-  @supports (right:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
-    .menu__arrow {
-      right: clamp(.625rem ,-3.125rem + 5vw ,1.25rem)
-    }
-  }
-  @supports not (right:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
-    .menu__arrow {
-      right: calc(.625rem + .625 * (100vw - 75rem)/ 12.5)
-    }
-  }
 }
 @media (min-width:991.98px) and (max-width:1129px) {
   .header__logo {
@@ -4265,7 +4253,7 @@ html.touch .menu__sub-list.open {
     }
   }
 }
-@media (min-width:68.75em) and (max-width:83.75em) {
+@media (min-width:991.98px) and (min-width:68.75em) and (max-width:83.75em) {
   @supports (font-size:clamp(0.9375rem ,-1.0677083333rem + 2.9166666667vw ,1.375rem)) {
     .menu__arrow {
       font-size: clamp(.9375rem ,-1.0677083333rem + 2.9166666667vw ,1.375rem)
@@ -4275,6 +4263,28 @@ html.touch .menu__sub-list.open {
     .menu__arrow {
       font-size: calc(.9375rem + .4375 * (100vw - 68.75rem)/ 15)
     }
+  }
+}
+@media (min-width:991.98px) and (max-width:68.75em) {
+  .menu__arrow {
+    font-size: .9375rem
+  }
+}
+@media (min-width:991.98px) and (min-width:75em) and (max-width:87.5em) {
+  @supports (right:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
+    .menu__arrow {
+      right: clamp(.625rem ,-3.125rem + 5vw ,1.25rem)
+    }
+  }
+  @supports not (right:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
+    .menu__arrow {
+      right: calc(.625rem + .625 * (100vw - 75rem)/ 12.5)
+    }
+  }
+}
+@media (min-width:991.98px) and (max-width:75em) {
+  .menu__arrow {
+    right: .625rem
   }
 }
 @media (min-width:389px) and (min-width:61.99875em) and (max-width:83.75em) {
