--- a/css/style.css
+++ b/css/style.css
@@ -962,6 +962,9 @@ body::after {
 .menu__item {
   position: relative
 }
+.menu__item.open .menu__sub-list {
+  display: block
+}
 .menu__link {
   display: inline-flex;
   align-items: center;
@@ -971,6 +974,22 @@ body::after {
   position: relative;
   transition: color .3s ease;
   z-index: 2
+}
+.menu__link.arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .25rem
+}
+.menu__link.open {
+  color: var(--button)
+}
+.menu__link.open .menu__arrow {
+  color: var(--button)
+}
+.menu__link.open .menu__arrow::before {
+  -webkit-transform: rotate(-180deg);
+  transform: rotate(-180deg)
 }
 .menu__sub-list {
   display: none;
@@ -999,26 +1018,21 @@ body::after {
 }
 .menu__arrow {
   font-size: 1.5rem;
-  position: absolute;
-  top: 50%;
-  right: -.3125rem;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+  position: relative;
   z-index: 3;
-  transition: color .3s ease
+  transition: color .3s ease;
+  flex: 0 0 1.5rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center
 }
 .menu__arrow::before {
   transition: -webkit-transform .3s ease 0s;
   transition: transform .3s ease 0s;
   transition: transform .3s ease 0s,-webkit-transform .3s ease 0s;
   will-change: transform
-}
-.menu__arrow.active {
-  color: var(--button)
-}
-.menu__arrow.active::before {
-  -webkit-transform: rotate(-180deg);
-  transform: rotate(-180deg)
 }
 .menu__logo {
   max-width: 14.6875rem
@@ -2409,15 +2423,6 @@ html.touch .menu__sub-list.open {
   .menu__link {
     padding-left: 1.25rem
   }
-  .menu__link.arrow {
-    padding-top: 1.21875rem
-  }
-  .menu__link.arrow {
-    padding-right: 3rem
-  }
-  .menu__link.arrow {
-    padding-left: 1.25rem
-  }
 }
 @media (min-width:389px) and (min-width:83.75em) {
   .services__article {
@@ -2909,6 +2914,22 @@ html.touch .menu__sub-list.open {
     margin-bottom: 1.6875rem
   }
 }
+@media (min-width:991.98px) and (min-width:87.5em) {
+  .menu__link.arrow {
+    padding-top: 1.21875rem
+  }
+  .menu__link.arrow {
+    padding-right: 1.25rem
+  }
+  .menu__link.arrow {
+    padding-left: 1.25rem
+  }
+}
+@media (min-width:991.98px) and (min-width:90em) {
+  .menu__link.arrow {
+    padding-bottom: 1.21875rem
+  }
+}
 @media (min-width:991.98px) and (min-width:83.75em) {
   .menu__arrow {
     font-size: 1.375rem
@@ -2930,11 +2951,6 @@ html.touch .menu__sub-list.open {
   }
   .articles {
     padding-top: 12.5rem
-  }
-}
-@media (min-width:991.98px) and (min-width:87.5em) {
-  .menu__arrow {
-    right: 1.25rem
   }
 }
 @media (min-width:1130px) {
@@ -3042,11 +3058,6 @@ html.touch .menu__sub-list.open {
     border-radius: 0 var(--br100) 0 0
   }
 }
-@media (min-width:90em) {
-  .menu__link.arrow {
-    padding-bottom: 1.21875rem
-  }
-}
 @media (max-width:1379px) {
   .testination__article {
     display: grid;
@@ -3067,16 +3078,10 @@ html.touch .menu__sub-list.open {
     padding-bottom: .625rem
   }
   .menu__link {
-    padding-right: .3125rem
+    padding-right: .125rem
   }
   .menu__link {
-    padding-left: .3125rem
-  }
-  .menu__link.arrow {
-    padding-right: 1.75rem
-  }
-  .menu__link.arrow {
-    padding-left: .625rem
+    padding-left: .125rem
   }
   .our-blog__article {
     padding-right: 1.25rem
@@ -3180,6 +3185,7 @@ html.touch .menu__sub-list.open {
     right: 0
   }
   .menu__list {
+    max-width: 19.375rem;
     flex-direction: column;
     gap: .25rem;
     width: 100%
@@ -3187,15 +3193,28 @@ html.touch .menu__sub-list.open {
   .menu__list:not(:last-child) {
     margin-bottom: 2.375rem
   }
+  .menu__item {
+    width: 100%
+  }
+  .menu__link.arrow.open {
+    z-index: 5;
+    border-radius: var(--br20);
+    background-color: var(--white);
+    box-shadow: 0 .375rem 1.6438rem 0 rgba(0,25,167,.1)
+  }
   .menu__link {
     padding: 1.21875rem .625rem;
     width: 100%;
     justify-content: center
   }
   .menu__sub-list {
+    width: 100%;
     left: 50%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    transform: translateX(-50%);
+    top: 75%;
+    z-index: 4;
+    padding-top: 2.5rem
   }
   .menu__mobile {
     position: sticky;
@@ -3523,12 +3542,6 @@ html.touch .menu__sub-list.open {
     padding-top: .625rem
   }
   .menu__link {
-    padding-bottom: .625rem
-  }
-  .menu__link.arrow {
-    padding-top: .625rem
-  }
-  .menu__link.arrow {
     padding-bottom: .625rem
   }
 }
@@ -4143,44 +4156,24 @@ html.touch .menu__sub-list.open {
       gap: calc(.9375rem + .9375 * (100vw - 75rem)/ 12.5)
     }
   }
-  @supports (padding-right:clamp(0.3125rem ,-5.3125rem + 7.5vw ,1.25rem)) {
+  @supports (padding-right:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
     .menu__link {
-      padding-right: clamp(.3125rem ,-5.3125rem + 7.5vw ,1.25rem)
+      padding-right: clamp(.125rem ,-6.625rem + 9vw ,1.25rem)
     }
   }
-  @supports not (padding-right:clamp(0.3125rem ,-5.3125rem + 7.5vw ,1.25rem)) {
+  @supports not (padding-right:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
     .menu__link {
-      padding-right: calc(.3125rem + .9375 * (100vw - 75rem)/ 12.5)
+      padding-right: calc(.125rem + 1.125 * (100vw - 75rem)/ 12.5)
     }
   }
-  @supports (padding-left:clamp(0.3125rem ,-5.3125rem + 7.5vw ,1.25rem)) {
+  @supports (padding-left:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
     .menu__link {
-      padding-left: clamp(.3125rem ,-5.3125rem + 7.5vw ,1.25rem)
+      padding-left: clamp(.125rem ,-6.625rem + 9vw ,1.25rem)
     }
   }
-  @supports not (padding-left:clamp(0.3125rem ,-5.3125rem + 7.5vw ,1.25rem)) {
+  @supports not (padding-left:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
     .menu__link {
-      padding-left: calc(.3125rem + .9375 * (100vw - 75rem)/ 12.5)
-    }
-  }
-  @supports (padding-right:clamp(1.75rem ,-5.75rem + 10vw ,3rem)) {
-    .menu__link.arrow {
-      padding-right: clamp(1.75rem ,-5.75rem + 10vw ,3rem)
-    }
-  }
-  @supports not (padding-right:clamp(1.75rem ,-5.75rem + 10vw ,3rem)) {
-    .menu__link.arrow {
-      padding-right: calc(1.75rem + 1.25 * (100vw - 75rem)/ 12.5)
-    }
-  }
-  @supports (padding-left:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
-    .menu__link.arrow {
-      padding-left: clamp(.625rem ,-3.125rem + 5vw ,1.25rem)
-    }
-  }
-  @supports not (padding-left:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
-    .menu__link.arrow {
-      padding-left: calc(.625rem + .625 * (100vw - 75rem)/ 12.5)
+      padding-left: calc(.125rem + 1.125 * (100vw - 75rem)/ 12.5)
     }
   }
 }
@@ -4230,6 +4223,8 @@ html.touch .menu__sub-list.open {
       padding-bottom: calc(.625rem + .59375 * (100vw - 68.75rem)/ 18.75)
     }
   }
+}
+@media (min-width:991.98px) and (min-width:68.75em) and (max-width:87.5em) {
   @supports (padding-top:clamp(0.625rem ,-1.5520833333rem + 3.1666666667vw ,1.21875rem)) {
     .menu__link.arrow {
       padding-top: clamp(.625rem ,-1.5520833333rem + 3.1666666667vw ,1.21875rem)
@@ -4241,7 +4236,18 @@ html.touch .menu__sub-list.open {
     }
   }
 }
-@media (min-width:68.75em) and (max-width:90em) {
+@media (min-width:991.98px) and (max-width:68.75em) {
+  .menu__link.arrow {
+    padding-top: .625rem
+  }
+  .menu__link.arrow {
+    padding-bottom: .625rem
+  }
+  .menu__arrow {
+    font-size: .9375rem
+  }
+}
+@media (min-width:991.98px) and (min-width:68.75em) and (max-width:90em) {
   @supports (padding-bottom:clamp(0.625rem ,-1.2959558824rem + 2.7941176471vw ,1.21875rem)) {
     .menu__link.arrow {
       padding-bottom: clamp(.625rem ,-1.2959558824rem + 2.7941176471vw ,1.21875rem)
@@ -4251,6 +4257,36 @@ html.touch .menu__sub-list.open {
     .menu__link.arrow {
       padding-bottom: calc(.625rem + .59375 * (100vw - 68.75rem)/ 21.25)
     }
+  }
+}
+@media (min-width:991.98px) and (min-width:75em) and (max-width:87.5em) {
+  @supports (padding-right:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
+    .menu__link.arrow {
+      padding-right: clamp(.625rem ,-3.125rem + 5vw ,1.25rem)
+    }
+  }
+  @supports not (padding-right:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
+    .menu__link.arrow {
+      padding-right: calc(.625rem + .625 * (100vw - 75rem)/ 12.5)
+    }
+  }
+  @supports (padding-left:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
+    .menu__link.arrow {
+      padding-left: clamp(.625rem ,-3.125rem + 5vw ,1.25rem)
+    }
+  }
+  @supports not (padding-left:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
+    .menu__link.arrow {
+      padding-left: calc(.625rem + .625 * (100vw - 75rem)/ 12.5)
+    }
+  }
+}
+@media (min-width:991.98px) and (max-width:75em) {
+  .menu__link.arrow {
+    padding-right: .625rem
+  }
+  .menu__link.arrow {
+    padding-left: .625rem
   }
 }
 @media (min-width:991.98px) and (min-width:68.75em) and (max-width:83.75em) {
@@ -4263,28 +4299,6 @@ html.touch .menu__sub-list.open {
     .menu__arrow {
       font-size: calc(.9375rem + .4375 * (100vw - 68.75rem)/ 15)
     }
-  }
-}
-@media (min-width:991.98px) and (max-width:68.75em) {
-  .menu__arrow {
-    font-size: .9375rem
-  }
-}
-@media (min-width:991.98px) and (min-width:75em) and (max-width:87.5em) {
-  @supports (right:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
-    .menu__arrow {
-      right: clamp(.625rem ,-3.125rem + 5vw ,1.25rem)
-    }
-  }
-  @supports not (right:clamp(0.625rem ,-3.125rem + 5vw ,1.25rem)) {
-    .menu__arrow {
-      right: calc(.625rem + .625 * (100vw - 75rem)/ 12.5)
-    }
-  }
-}
-@media (min-width:991.98px) and (max-width:75em) {
-  .menu__arrow {
-    right: .625rem
   }
 }
 @media (min-width:389px) and (min-width:61.99875em) and (max-width:83.75em) {
