--- a/css/style.css
+++ b/css/style.css
@@ -971,6 +971,7 @@ body::after {
   font-weight: 600;
   font-size: .875rem;
   text-transform: uppercase;
+  padding: 1.21875rem .625rem;
   position: relative;
   transition: color .3s ease;
   z-index: 2
@@ -2412,18 +2413,6 @@ html.touch .menu__sub-list.open {
   .header__border-btn {
     padding-left: 2rem
   }
-  .menu__link {
-    padding-top: 1.21875rem
-  }
-  .menu__link {
-    padding-bottom: 1.21875rem
-  }
-  .menu__link {
-    padding-right: 1.25rem
-  }
-  .menu__link {
-    padding-left: 1.25rem
-  }
 }
 @media (min-width:389px) and (min-width:83.75em) {
   .services__article {
@@ -2925,6 +2914,18 @@ html.touch .menu__sub-list.open {
   .menu__link.arrow {
     padding-left: 1.25rem
   }
+  .menu__link {
+    padding-top: 1.21875rem
+  }
+  .menu__link {
+    padding-bottom: 1.21875rem
+  }
+  .menu__link {
+    padding-right: 1.25rem
+  }
+  .menu__link {
+    padding-left: 1.25rem
+  }
 }
 @media (min-width:991.98px) and (min-width:90em) {
   .menu__link.arrow {
@@ -3077,12 +3078,6 @@ html.touch .menu__sub-list.open {
   }
   .header__body {
     padding-bottom: .625rem
-  }
-  .menu__link {
-    padding-right: .125rem
-  }
-  .menu__link {
-    padding-left: .125rem
   }
   .our-blog__article {
     padding-right: 1.25rem
@@ -3538,12 +3533,6 @@ html.touch .menu__sub-list.open {
   }
   .header__border-btn {
     padding-left: .75rem
-  }
-  .menu__link {
-    padding-top: .625rem
-  }
-  .menu__link {
-    padding-bottom: .625rem
   }
 }
 @media (max-width:61.99875em) {
@@ -4157,26 +4146,6 @@ html.touch .menu__sub-list.open {
       gap: calc(.9375rem + .9375 * (100vw - 75rem)/ 12.5)
     }
   }
-  @supports (padding-right:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
-    .menu__link {
-      padding-right: clamp(.125rem ,-6.625rem + 9vw ,1.25rem)
-    }
-  }
-  @supports not (padding-right:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
-    .menu__link {
-      padding-right: calc(.125rem + 1.125 * (100vw - 75rem)/ 12.5)
-    }
-  }
-  @supports (padding-left:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
-    .menu__link {
-      padding-left: clamp(.125rem ,-6.625rem + 9vw ,1.25rem)
-    }
-  }
-  @supports not (padding-left:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
-    .menu__link {
-      padding-left: calc(.125rem + 1.125 * (100vw - 75rem)/ 12.5)
-    }
-  }
 }
 @media (min-width:991.98px) and (max-width:1129px) {
   .header__logo {
@@ -4204,6 +4173,18 @@ html.touch .menu__sub-list.open {
       padding-left: calc(.75rem + 1.25 * (100vw - 68.75rem)/ 18.75)
     }
   }
+}
+@media (min-width:991.98px) and (min-width:68.75em) and (max-width:87.5em) {
+  @supports (padding-top:clamp(0.625rem ,-1.2083333333rem + 2.6666666667vw ,1.125rem)) {
+    .menu__link.arrow {
+      padding-top: clamp(.625rem ,-1.2083333333rem + 2.6666666667vw ,1.125rem)
+    }
+  }
+  @supports not (padding-top:clamp(0.625rem ,-1.2083333333rem + 2.6666666667vw ,1.125rem)) {
+    .menu__link.arrow {
+      padding-top: calc(.625rem + .5 * (100vw - 68.75rem)/ 18.75)
+    }
+  }
   @supports (padding-top:clamp(0.625rem ,-1.5520833333rem + 3.1666666667vw ,1.21875rem)) {
     .menu__link {
       padding-top: clamp(.625rem ,-1.5520833333rem + 3.1666666667vw ,1.21875rem)
@@ -4225,23 +4206,17 @@ html.touch .menu__sub-list.open {
     }
   }
 }
-@media (min-width:991.98px) and (min-width:68.75em) and (max-width:87.5em) {
-  @supports (padding-top:clamp(0.625rem ,-1.2083333333rem + 2.6666666667vw ,1.125rem)) {
-    .menu__link.arrow {
-      padding-top: clamp(.625rem ,-1.2083333333rem + 2.6666666667vw ,1.125rem)
-    }
-  }
-  @supports not (padding-top:clamp(0.625rem ,-1.2083333333rem + 2.6666666667vw ,1.125rem)) {
-    .menu__link.arrow {
-      padding-top: calc(.625rem + .5 * (100vw - 68.75rem)/ 18.75)
-    }
-  }
-}
 @media (min-width:991.98px) and (max-width:68.75em) {
   .menu__link.arrow {
     padding-top: .625rem
   }
   .menu__link.arrow {
+    padding-bottom: .625rem
+  }
+  .menu__link {
+    padding-top: .625rem
+  }
+  .menu__link {
     padding-bottom: .625rem
   }
   .menu__arrow {
@@ -4281,6 +4256,26 @@ html.touch .menu__sub-list.open {
       padding-left: calc(.625rem + .625 * (100vw - 75rem)/ 12.5)
     }
   }
+  @supports (padding-right:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
+    .menu__link {
+      padding-right: clamp(.125rem ,-6.625rem + 9vw ,1.25rem)
+    }
+  }
+  @supports not (padding-right:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
+    .menu__link {
+      padding-right: calc(.125rem + 1.125 * (100vw - 75rem)/ 12.5)
+    }
+  }
+  @supports (padding-left:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
+    .menu__link {
+      padding-left: clamp(.125rem ,-6.625rem + 9vw ,1.25rem)
+    }
+  }
+  @supports not (padding-left:clamp(0.125rem ,-6.625rem + 9vw ,1.25rem)) {
+    .menu__link {
+      padding-left: calc(.125rem + 1.125 * (100vw - 75rem)/ 12.5)
+    }
+  }
 }
 @media (min-width:991.98px) and (max-width:75em) {
   .menu__link.arrow {
@@ -4288,6 +4283,12 @@ html.touch .menu__sub-list.open {
   }
   .menu__link.arrow {
     padding-left: .625rem
+  }
+  .menu__link {
+    padding-right: .125rem
+  }
+  .menu__link {
+    padding-left: .125rem
   }
 }
 @media (min-width:991.98px) and (min-width:68.75em) and (max-width:83.75em) {
