--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,8 @@ body::after {
   top: 1.875rem;
   right: 1.875rem;
   width: 1.5rem;
-  height: 1.5rem
+  height: 1.5rem;
+  outline: .0625rem solid transparent
 }
 .popup__close::after,
 .popup__close::before {
@@ -1173,18 +1174,16 @@ body::after {
   color: var(--blue)
 }
 .hero {
-  position: relative;
-  min-height: 100dvh
+  position: relative
 }
 .hero__container {
   position: relative;
   z-index: 2;
-  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-top: 4.375rem;
-  padding-bottom: 1.875rem
+  padding-bottom: 7.5rem
 }
 .hero__info {
   max-width: 38.125rem
@@ -1213,6 +1212,9 @@ body::after {
   object-fit: cover;
   -o-object-position: right bottom;
   object-position: right bottom
+}
+.hero__mob-bg {
+  display: none
 }
 .about {
   padding-top: 2.75rem;
@@ -1572,9 +1574,6 @@ body::after {
 .centers__container > *:not(:last-child) {
   margin-bottom: 2.0625rem
 }
-.centers__list li:not(:last-child) {
-  margin-bottom: 1.5rem
-}
 .centers__card {
   border: .0625rem solid var(--stroke);
   padding: 2.5rem 1.25rem;
@@ -1595,9 +1594,6 @@ body::after {
   left: 0;
   -o-object-fit: cover;
   object-fit: cover
-}
-.centers__info {
-  flex: 0 1 50%
 }
 .centers__sub-ttl:not(:last-child) {
   margin-bottom: .5rem
@@ -2652,6 +2648,12 @@ body::after {
   .tabs__title:last-of-type {
     border-radius: 0 var(--br20) var(--br20) 0
   }
+  .tabs__title.all-categorry {
+    display: none
+  }
+  .tabs__body.all-categorry {
+    display: none
+  }
   .header__top {
     border-bottom: .0625rem solid rgba(97,128,163,.2);
     padding: .125rem 1rem
@@ -2671,8 +2673,13 @@ body::after {
   .menu__mobile {
     display: none
   }
+  .hero {
+    min-height: 100dvh
+  }
   .hero__container {
-    padding-top: 11.25rem
+    min-height: 100dvh;
+    padding-top: 11.25rem;
+    padding-bottom: 1.875rem
   }
   .about__container > *:not(:last-child) {
     margin-bottom: 2rem
@@ -2749,7 +2756,7 @@ body::after {
     margin-bottom: 3.3125rem
   }
   .centers__list li:not(:last-child) {
-    margin-bottom: 2.5rem
+    margin-bottom: 1.5rem
   }
   .centers__list li:nth-child(even) .centers__card {
     flex-direction: row-reverse
@@ -2759,6 +2766,9 @@ body::after {
     align-items: center;
     border-radius: 0 var(--br);
     padding: 2.5rem
+  }
+  .centers__info {
+    flex: 0 1 50%
   }
   .centers__sub-ttl:not(:last-child) {
     margin-bottom: 2.0625rem
@@ -2943,16 +2953,16 @@ body::after {
     gap: 3.75rem
   }
   .contact {
-    padding-top: 12.5rem
+    padding-top: 13.125rem
   }
   .blog {
-    padding-top: 12.5rem
+    padding-top: 13.125rem
   }
   .faqs {
-    padding-top: 12.5rem
+    padding-top: 13.125rem
   }
   .articles {
-    padding-top: 12.5rem
+    padding-top: 13.125rem
   }
 }
 @media (min-width:1130px) {
@@ -3104,6 +3114,14 @@ body::after {
   }
   .our-blog__article figure:not(:last-child) {
     margin-bottom: 2rem
+  }
+}
+@media (max-width:1199px) {
+  .our-blog__big {
+    grid-column: 1/3
+  }
+  .our-blog__big figure {
+    aspect-ratio: 387/220
   }
 }
 @media (max-width:1100px) {
@@ -3265,6 +3283,14 @@ body::after {
   .branches .hero__breadcrumbs {
     display: none
   }
+  .centers__list li {
+    height: 100%
+  }
+  .centers__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+    gap: 1.25rem
+  }
   .centers__card {
     display: flex;
     flex-direction: column;
@@ -3386,6 +3412,14 @@ body::after {
     display: none
   }
 }
+@media (max-width:849px) {
+  .our-blog__big {
+    grid-column: 1/2
+  }
+  .our-blog__big figure {
+    aspect-ratio: 266/259
+  }
+}
 @media (max-width:767.98px) {
   .footer__logo {
     padding: 1.3125rem 0
@@ -3409,9 +3443,25 @@ body::after {
   .hero {
     margin-bottom: 1rem
   }
-  .hero__bg img {
-    -o-object-fit: contain;
-    object-fit: contain;
+  .hero__bg {
+    display: none
+  }
+  .hero__mob-bg {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%
+  }
+  .hero__mob-bg img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+    object-fit: cover;
     -o-object-position: right bottom;
     object-position: right bottom
   }
@@ -3451,6 +3501,9 @@ body::after {
   .faq__spollers .spollers__title i::after,
   .faq__spollers .spollers__title i::before {
     background-color: var(--secondary)
+  }
+  .centers__list {
+    grid-template-columns: 1fr
   }
   .our-services__item {
     flex-direction: column
@@ -4409,44 +4462,44 @@ body::after {
       gap: calc(1.5rem + 2.25 * (100vw - 61.99875rem)/ 21.75125)
     }
   }
-  @supports (padding-top:clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)) {
+  @supports (padding-top:clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)) {
     .contact {
-      padding-top: clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)
+      padding-top: clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)
     }
   }
-  @supports not (padding-top:clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)) {
+  @supports not (padding-top:clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)) {
     .contact {
-      padding-top: calc(10.625rem + 1.875 * (100vw - 61.99875rem)/ 21.75125)
+      padding-top: calc(10.625rem + 2.5 * (100vw - 61.99875rem)/ 21.75125)
     }
   }
-  @supports (padding-top:clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)) {
+  @supports (padding-top:clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)) {
     .blog {
-      padding-top: clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)
+      padding-top: clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)
     }
   }
-  @supports not (padding-top:clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)) {
+  @supports not (padding-top:clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)) {
     .blog {
-      padding-top: calc(10.625rem + 1.875 * (100vw - 61.99875rem)/ 21.75125)
+      padding-top: calc(10.625rem + 2.5 * (100vw - 61.99875rem)/ 21.75125)
     }
   }
-  @supports (padding-top:clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)) {
+  @supports (padding-top:clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)) {
     .faqs {
-      padding-top: clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)
+      padding-top: clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)
     }
   }
-  @supports not (padding-top:clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)) {
+  @supports not (padding-top:clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)) {
     .faqs {
-      padding-top: calc(10.625rem + 1.875 * (100vw - 61.99875rem)/ 21.75125)
+      padding-top: calc(10.625rem + 2.5 * (100vw - 61.99875rem)/ 21.75125)
     }
   }
-  @supports (padding-top:clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)) {
+  @supports (padding-top:clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)) {
     .articles {
-      padding-top: clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)
+      padding-top: clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)
     }
   }
-  @supports not (padding-top:clamp(10.625rem ,5.2805873226rem + 8.6201942417vw ,12.5rem)) {
+  @supports not (padding-top:clamp(10.625rem ,3.4991164301rem + 11.4935923223vw ,13.125rem)) {
     .articles {
-      padding-top: calc(10.625rem + 1.875 * (100vw - 61.99875rem)/ 21.75125)
+      padding-top: calc(10.625rem + 2.5 * (100vw - 61.99875rem)/ 21.75125)
     }
   }
 }
@@ -4471,6 +4524,11 @@ body::after {
   }
   .articles {
     padding-top: 10.625rem
+  }
+}
+@media (min-width:767.98px) and (max-width:991.98px) {
+  .centers__card {
+    height: 100%
   }
 }
 @media (min-width:767.98px) and (min-width:47.99875em) and (max-width:83.75em) {
